fixed javascript not showing active homepage

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
 
 .home_top_background {
   position: relative;
-  height: 80vh;
+  height: 95vh;
   /* background: linear-gradient( rgba(245, 205, 195, 1), rgba(245, 205, 195, 1)), url('./img/home_background.jpg') no-repeat 50% 30%;
   background-blend-mode: hard-light;
   -webkit-background-size: cover;
@@ -25,7 +25,7 @@ html, body {
 .home_top_blend {
   position: absolute;
   width: 100%;
-  height: 80vh;
+  height: 95vh;
   background-color: rgba(252, 215, 213, .74);
 }
 
